Update and rename REAME.md to REAME.html

--- a/REAME.html
+++ b/REAME.html
@@ -40,7 +40,7 @@
 An easiest method to get ES TEAMS-V2 Session Id without stress 
 
 ### WEB SERVER
-    <a href='https://replit.com/github/paskito002/ES_TEAMS-V2' target="_blank"><img alt='Replit' src='https://img.shields.io/badge/-Deploy-red?style=for-the-badge&logo=replit&logoColor=white'/></a>
+    ```<```a`` href='https://replit.com/github/paskito002/ES_TEAMS-V2' target="_blank"><img alt='Replit' src='https://img.shields.io/badge/-Deploy-red?style=for-the-badge&logo=replit&logoColor=white'/></a>```
 
    
 ### 3. DEPLOY ON PANEL
